# kolla

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.cfg
collagraph/: collagraph.py  fragment.py
collagraph/renderers/: __init__.py  renderer.py
collagraph/sfc/: compiler.py
examples/: app.cgx  bla.py  counter.cgx  counter.kolla  counter.py  example.py  number_button.cgx  number_pad.cgx  number_pad.kolla  numberpad.py  parse.py  pygfx-component.cgx  run.py
examples/nested/: app.py  item.py
examples/pygfx/: app_point_cloud.cgx  basic_scene.cgx  combined-example.py  point.cgx  point_cloud.cgx  render_widget.cgx
kolla/: __init__.py  component.py  fragment.py  kolla.py  types.py
kolla/renderers/: __init__.py  dict_renderer.py  dom_renderer.py  html_renderer.py  pygfx_renderer.py  pyside_renderer.py  renderer.py
kolla/renderers/pyside/: utils.py
kolla/renderers/pyside/objects/: qobject.py  statusbar.py  treewidget.py  widget.py
kolla/runtime/: __init__.py  block.py  component.py  fragment.py  scheduler.py
kolla/sfc/: __init__.py  analyser.py  compiler.py  generator.py  importer.py  parse.py  parser.py  sfc.py  utils.py
tests/: conftest.py  test_attributes_dynamic.py  test_attributes_static.py  test_component_events.py  test_component_life_cycle.py  test_component_provide_inject.py  test_directive_else.py  test_directive_else_if.py  test_directive_events.py  test_directive_for.py  test_directive_if.py  test_dynamic_attributes.py  test_dynamic_type.py  test_events.py  test_kolla.py  test_load_string.py  test_nested_components.py  test_parser.py  test_reconciliation.py  test_refs.py  test_slots.py  test_slots_dynamic.py  test_static_attributes.py  test_tag_component.py  test_tag_dynamic.py  test_tag_static.py  test_tag_template.py  test_template_tag.py  test_text_expressions.py  test_tree_else.py  test_tree_else_if.py  test_tree_for.py  test_tree_if.py
tests/data/: container.kolla  item.kolla
tests/data/component/: events_child.cgx  events_parent.cgx  provide_child.cgx  provide_parent.cgx  provide_root.cgx
tests/data/slots/: dynamic_for.cgx  dynamic_for_template.cgx  dynamic_if.cgx  dynamic_if_template.cgx  node.cgx  simple_tree.cgx  slots_implicit_default_slot.cgx  template.cgx  template_empty.cgx  template_implicit_default_slot.cgx  template_implicit_default_slot_name.cgx  template_partial.cgx  tree.cgx  widget_with_slots.cgx
tests/data/text/: expressions.cgx
