[tool.poetry]
name = "kolla"
version = "0.1.0"
description = "Reactive user interfaces"
authors = [
	"Berend Klein Haneveld <berendkleinhaneveld@gmail.com>",
	"Korijn van Golen <korijn@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/fork-tongue/kolla"
readme = "README.md"

[tool.poetry.extras]
pygfx = ["pygfx"]
pyside = ["pyside6_essentials"]

[tool.poetry.dependencies]
python = ">=3.9"
observ = ">=0.9.5"
pygfx = { version = ">=0.1.9", optional = true }
pyside6_essentials = { version = "^6.3", python = "<3.12", optional = true }

# TODO: add entry_point to be able to run kolla as module and render .kolla files directly
# python -m kolla path/to/example.kolla

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-qt = "*"
pytest-random-order = "*"
pytest-watch = "*"
pytest-xvfb = "*"
rich = { version = "*", python = "<4.0" }
ruff = "*"

[tool.coverage.run]
omit = ["tests/*", "kolla/renderers/*"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.ruff]
# Add "Q" to the list of enabled codes.
select = ["E", "F", "T20", "I"]

[tool.ruff.per-file-ignores]
"kolla/runtime/__init__.py" = ["F401"]
