[tool.poetry]
name = "kolla"
version = "0.5.2"
description = "Reactive user interfaces"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>", "Korijn van Golen <korijn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/fork-tongue/kolla"
readme = "README.md"

[tool.poetry.extras]
pygfx = ["pygfx"]
pyside = ["pyside6_essentials"]

[tool.poetry.dependencies]
python = ">=3.9"
observ = ">=0.14.1"
pygfx = { version = ">=0.1.9", optional = true }
pyside6_essentials = { version = "^6.6", python = "<3.13", optional = true }

# TODO: add entry_point to be able to run kolla as module and render .kolla files directly
# python -m kolla path/to/example.kolla

[tool.poetry.group.dev.dependencies]
black = "*"  # Only for debugging generated code
ruff = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-qt = "*"
pytest-random-order = "*"
pytest-xvfb = "*"
rich = {version = "*", python = "<4.0"}

[tool.coverage.run]
omit = [
	"tests/*",
	"kolla/renderers/*"
]

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
