[tool.poetry]
name = "collagraph"
version = "0.5.2"
description = "Reactive user interfaces"
authors = ["Berend Klein Haneveld <berendkleinhaneveld@gmail.com>", "Korijn van Golen <korijn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/fork-tongue/collagraph"
readme = "README.md"

[tool.poetry.extras]
pygfx = ["pygfx"]
pyside = ["pyside6"]

[tool.poetry.dependencies]
python = ">=3.9"
observ = ">=0.14.1"
pygfx = { version = ">=0.1.17", optional = true }
pyside6 = { version = "^6.6", python = "<3.13", optional = true }

# TODO: add entry_point to be able to run collagraph as module and render .cgx files directly
# python -m collagraph path/to/example.cgx

[tool.poetry.group.dev.dependencies]
black = "*"  # Only for debugging generated code, ruff is used for formatting
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-qt = "*"
pytest-random-order = "*"
pytest-xvfb = "*"
rich = {version = "*", python = "<4.0"}
ruff = "*"

[tool.coverage.run]
omit = [
	"tests/*",
	"collagraph/renderers/*"
]

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]
unfixable = [
    "F401",  # Unused import
    "F841",  # Unused variable
]
[tool.ruff.per-file-ignores]
"tests/*" = ["N806"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
